# rules_pact

./: .gitignore  .releaserc  BUILD.bazel  MODULE.bazel  README.md  `  defs.bzl  package-lock.json  package.json
.bcr/: config.yml  metadata.template.json  source.template.json
.commitlint/: package-lock.json
.github/workflows/: main.yml
private/: BUILD.bazel  consumer.bzl  provider.bzl  versions.bzl
private/pact/: BUILD.bazel  consumer.bzl  pact_test.bzl  provider.bzl  side_car.bzl
private/pact/templates/: BUILD.bazel  pact_test.template.sh
private/repositories/: pact_reference.bzl
